[project]
name = "jax-tg"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "equinox==0.11.7",
    "jax[cpu]==0.4.34",
    "optax==0.2.3",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab==4.2.5",
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "ruff==0.6.8",
]
