[project]
name = "jax-tg"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "equinox==0.11.8",
    "jax[cpu]==0.4.35",
    "optax==0.2.4",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab==4.3.0",
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "ruff==0.7.3",
]
