[project]
name = "jax-tg"
version = "0.1.0"
description = ""
authors = ["Thomas Zub <thomas.zub@outlook.de>"]
readme = "README.md"
package-mode = false
requires-python = "==3.13.*"
dependencies = [
    "equinox==0.12.2",
    "jax[cpu]==0.4.38",
    "optax==0.2.4",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab==4.4.3",
    "matplotlib==3.10.3",
    "pandas==2.3.0",
    "ruff==0.11.13",
]
